tests/parsing/smtlib/mcil/errors/256_check-system_query_unclosed.mcil
(check-system sys :query (q (r) s))